# test_python

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: template_devcontainer.json
config/: catalog.yaml  logging.yaml  parameters.yaml  template.env
docs/: project_structure.md
docs/guides/: python_setup_guide.md
notebooks/: 01_local_python_setup.ipynb
pilot_project/: main.py
src/: __init__.py  config.py  decorators.py  logger.py  utils.py
src/data/: metadata.py
src/models/: linearRegression.py
src/plot/: scatter.py
